@startuml "YouTube API"
skinparam classAttributeIconSize 0
hide circle
title Relação dos dados obtidos da API do YouTube

class Video {
  +video_id: str
  +title: Optional[str]
  +channel_title: Optional[str]
  +channel_id: Optional[str]
  +published_at: Optional[str]
  +category_id: Optional[str]
  +thumbnail: Optional[str]
  +view_count: Optional[int]
  +like_count: Optional[int]
  +comment_count: Optional[int]
}

class Comment {
  +video_id: str
  +comment_thread_id: Optional[str]
  +comment_id: Optional[str]
  +author: Optional[str]
  +text: Optional[str]
  +like_count: int = 0
  +published_at: Optional[str] = None
  +updated_at: Optional[str] = None
  +total_reply_count: int = 0
  +video_title: Optional[str] = None
  +channel_title: Optional[str] = None
  +video_view_count: Optional[int] = None
  +video_like_count: Optional[int] = None
  +video_comment_count: Optional[int] = None
}

class Channel {
  +channel_id: str
  +title: Optional[str]
  +description: Optional[str]
  +custom_url: Optional[str]
  +published_at: Optional[str]
  +country: Optional[str]
  +thumbnail: Optional[str]
  +view_count: Optional[int]
  +subscriber_count: Optional[int]
  +video_count: Optional[int]
  +hidden_subscriber_count: bool = False
}

class SubtitleSegment {
  +text: str
  +start: float
  +duration: float
  +to_dict(): dict
}

class Subtitle {
  +video_id: str
  +language: str
  +language_name: str
  +is_generated: bool
  +segments: List<SubtitleSegment>
  +full_text: str
  +to_dict: dict
}

Channel "1" o-- "0..*" Video : possui
Video "1" o-- "0..*" Comment : recebe
Video "1" o-- "0..*" Subtitle : possui
Subtitle "1" *-- "1..*" SubtitleSegment : contém

Comment ..> Video : video_id
Subtitle ..> Video : video_id
Video ..> Channel : channel_id
Comment ..> Channel : channel_title
Comment ..> Video : video_title
@enduml